--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "css-loader": "^0.28.1",
     "ts-loader": "^2.0.3",
+    "tslint": "^5.11.0",
     "typescript": "^2.7.2",
     "vue-loader": "^12.0.3",
     "vue-template-compiler": "^2.5.2",
